--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 tcharts_studentabroad:
-    build: .
-    environment:
-      WORKER_SMTP_PORT: 265
-    command: python app.py
-    volumes:
-      - .:/home/app/tact_chart
-    ports:
-      - "3000:3000"
+  build: .
+  command: python app.py
+  volumes:
+    - .:/home/app/studentabroad
+  ports:
+    - "3000:3000"
